Fix heading on mobile

--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -151,6 +151,10 @@
 }
 
 @media (min-width: 320px) and (max-width: 767px) {
+    .dorne-welcome-area {
+        padding-top: 150px;
+    }
+    
     .faq-content{
         margin: 100px 0px 0px 0px;
     }
